# make-me-unicorn

./: .env.example  .gitignore  .snapshotrc.example  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PROJECT.md  README.es.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SNAPSHOT.md  SNAPSHOT_self.md  SNAPSHOT_vista-sphere-pro.md  SPEC.md  STATUS.md  Unicorn.md  current_sprint.md  llms.txt  package.json  pyproject.toml  server.json  snapshot
.claude-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: blindspot_report.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy-website.yml  mmu-guardrails.yml  release.yml
assets/: demo.cast
assets/brand/: README.md
cli/: README.md
docs/: faq.md  glossary.md  use-cases.md
docs/adr/: 001_decision_template.md
docs/blueprints/: 01-frontend.md  02-backend.md  03-auth.md  04-billing.md  05-devops.md  08-seo-marketing.md  09-legal-compliance.md  11-testing.md  12-cicd.md  13-email-notifications.md  14-analytics.md  (+1 more)
examples/: founder_journey.md
prompts/: adr.md  close.md  start.md
scripts/: ci_guardrails.sh  demo.sh  extract_changelog.py  mmu.sh  record_demo_cast.py  render_cast_gif.py  set_github_metadata.sh  snapshot.sh  sync_packaged_data.py
tests/: test_cli_unittest.py  test_cmd_validate.py  test_feature_flags.py  test_llm_unittest.py  test_mcp_server.py  test_packaged_data.py  test_validators_hn.py  test_validators_nlp.py  test_validators_reddit.py  test_validators_report.py  test_validators_synthesize.py  test_vibecheck.py
website/: package-lock.json  package.json
(+75 files in other folders)
