[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "make-me-unicorn"
version = "0.2.0"
description = "Founder operating system CLI for solo SaaS builders"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Make Me Unicorn Contributors" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
mmu = "mmu_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
