[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "make-me-unicorn"
version = "0.3.0"
description = "Founder operating system CLI for solo SaaS builders"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Make Me Unicorn Contributors" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
llm = [
  "anthropic>=0.40",
]
dev = [
  "mypy>=1.8",
  "ruff>=0.6",
]
all = [
  "anthropic>=0.40",
  "mypy>=1.8",
  "ruff>=0.6",
]

[project.scripts]
mmu = "mmu_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
